# rust-clean-architecture-api-project

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-11-15-235713_create_user/: up.sql
src/: lib.rs  main.rs  schema.rs
src/application/use_cases/: get_user.rs  register_user.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: user_service.rs
src/infrastructure/: mod.rs  web.rs
src/infrastructure/db/: connection.rs
src/infrastructure/repositories/: mod.rs  postgres_user_repository.rs
src/presentation/handlers/: user_handler.rs
src/presentation/routes/: user_routes.rs
tests/domain/: mod.rs  user_test.rs
