[package]
name = "rust_clean-architecture_api_project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_clean-architecture_api_project"
path = "src/main.rs"

[lib]
name = "rust_clean_architecture_api_project"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
async-trait = "0.1.81"
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
actix-web = "4.8.0"
log = "0.4.22"
env_logger = "0.11.3"